   - Added CException             ( inherits from std::exception )
   - Added CFileException         ( inherits from CException ) 
   - Added CNotSupportedException ( inherits from CException )
   - Added CResourceException     ( inherits from CException )
   - Added CUserException         ( inherits from CException )
   - Updated CWinException        ( inherits from CException )
   
   CWinExceptions are now thrown under the following circumstances:
   - A failure to create a thread
   - A failure to create a window, including:
     - generic windows
	 - dialogs
	 - property sheets
	 - task dialogs
   - A failure to create a GDI resource, namely:
     - device contexts
     - bitmaps
     - brushes
     - fonts
     - palettes
     - pens
     - regions
   
   Notes:
    - Exceptions should be thrown by value, and caught by const reference.   
    - A failure to create a GDI resources occurs when too many GDI resources are allocated to the process. A GDI resource leak can cause this.
   


Changes in detail
-----------------
Split wxx_winutils.h into several header files as follows:
Added wxx_rect.h
Added wxx_textconv.h
Added wxx_themes.h
Removed wxx_winutils.h

Split wxx_wincore into several header files as follows:
Added wxx_appcore0.h
Added wxx_appcore.h
Added wxx_exception.h
Added wxx_wincore0.h

Added UWN_TABCLOSE windows message notification

Added CTabbedMDI::OnTabClose
Added CWnd::OnPaint
Added CWnd::SetDlgCtrlID

Modified    CDC::CreateCompatibleDC returns HDC
Modified    CDC::CreateDC 			returns HDC
Modified    CDC::CreateIC 			returns HDC



Version 8.0.1
==============

Bug Fix
* Updated LoadCommonControls to resolve issues with modal dialogs
  running on older operating systems.  


New Features and Enhancements
----------------------------- 
* Win32++ is now system DPI (Dots Per Inch) aware.
  The manifest for each sample has been updated to support DPI aware.
  The size of the CFrame status bar and menu elements are now adjusted to