@@ -35,6 +35,10 @@ New Features and Enhancements
    - Added CResourceException     ( inherits from CException )
    - Added CUserException         ( inherits from CException )
    - Updated CWinException        ( inherits from CException )
+
+   CNotSupportedExceptions are thrown under the following circumstances:
+     - An attempt is made to run more than one instance of CWinApp
+	 - CWinApp fails to allocate a Thread Local Storage
    
    CWinExceptions are now thrown under the following circumstances:
    - A failure to create a thread
@@ -51,11 +55,16 @@ New Features and Enhancements
      - palettes
      - pens
      - regions
+	 
+   CUserExceptions are thrown under the following circumstances:
+     - A CDataExchange DDX or DDV function fails validation
    
    Notes:
     - Exceptions should be thrown by value, and caught by const reference.   
-    - A failure to create a GDI resources occurs when too many GDI resources are allocated to the process. A GDI resource leak can cause this.
-   
+	- Catch CExceptions to catch all exceptions inherited from CException.
+	- CException is an abstract class. CExceptions can't be thrown.
+    - A failure to create a GDI resources occurs when too many GDI resources
+      are allocated to the process. A GDI resource leak can cause this.  
 
 
 Changes in detail
